--- a/Arrow_sample.ipynb
+++ b/Arrow_sample.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koalas_df = koalas.from_pandas(panda_df)"
+    "koalas_df = koalas.from_pandas(pandas_df)"
    ]
   },
   {
