--- a/Arrow_sample.ipynb
+++ b/Arrow_sample.ipynb
@@ -24,7 +24,7 @@
     "import pyarrow.parquet as pq\n",
     "\n",
     "spark = SparkSession\\\n",
-    ".builder.appName('demoMedium')\\\n",
+    ".builder.appName('demoMedium1')\\\n",
     ".enableHiveSupport()\\\n",
     ".getOrCreate()"
    ]
